# silo

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.silo-dos/: decision_log.md  experience_map.md  local_skill_integration_design.md  project_profile.md  remote_sync_proof.md  research_brain_bridge.md  research_brain_export_v1.md  research_brain_write_plan.md  self_evolution.md  standing_approval_profile.md  technical_route.md  v04_architecture.md
docs/: backend_compare.md  cli_solve.md  json_model_format.md  lp_solver.md  mip_examples.md  mip_solve_cli.md  phase4_regression_checklist.md  presolve_cli.md
native/: README.md
notes/: 00_solver_roadmap.md  01_lp_layer_soplex_highs.md  02_simplex_basis_and_reoptimization.md  03_presolve_scaling_and_canonicalization.md  04_mip_layer_cbc.md  05_branch_and_bound_design.md  06_cut_generation_and_callbacks.md  07_scip_architecture_long_term.md  08_stochastic_robust_extension.md  09_api_and_file_formats.md  10_revised_simplex_design.md  11_dual_values_design.md  12_presolve_scaling_design.md  13_repeated_presolve_design.md  14_phase4_completion_summary.md  15_branch_and_bound_design.md  16_mip_cli_exposure_design.md  17_mip_diagnostics_output_design.md  18_cut_callback_boundary_design.md  19_decomposition_boundary_design.md  20_uncertainty_boundary_design.md  21_native_backend_boundary_design.md  22_native_kernel_candidate_selection.md  23_native_build_dependency_policy.md  24_native_implementation_decision_packet.md  25_native_implementation_defer_decision.md
scripts/: check_quality.py  run_tests.py
tasks/: README.md  phase_02_model_core.md  (+9 more)
(+449 files in other folders)
