[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silo-solver"
version = "0.1.0"
description = "A minimal solver kernel for learning LP simplex and mixed-integer optimization."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Ning Xu" }
]
keywords = [
  "linear programming",
  "mixed integer programming",
  "simplex",
  "optimization",
  "operations research",
  "solver"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.8"
]
optional-backends = [
  "scipy>=1.11"
]

[project.urls]
Homepage = "https://github.com/exoplanetX/silo"
Repository = "https://github.com/exoplanetX/silo"
Issues = "https://github.com/exoplanetX/silo/issues"

[project.scripts]
silo = "silo.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--import-mode=importlib"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
